cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug220307.cpp
struct bug220307_Foo
{
    bool hello[10] = {};
};
